--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="about-col-1">
                     <h1 class="subtitle">About Me</h1>
                     <p>My name is Shreya Pachghare and I am currently in my pre-final year of pursuing a Bachelor's degree in Engineering. I am particularly enthusiastic about web designing and web development. <br>
-                        I have gained hands-on experience with several programming languages such as Python, C++, and C. However, I find myself most comfortable using C++ and Python. When it comes to problem-solving with data structures and algorithms, I prefer using C++. I frequently solve problems on platform like leetcode. In addition, I enjoy using MERN Stack which has resulted in the creation of numerous small project. <br>
+                        I have gained hands-on experience with several programming languages such as Python, C++, and C. However, I find myself most comfortable using C++ and Python. When it comes to problem-solving with data structures and algorithms, I prefer using C++. I frequently solve problems on platform like leetcode. In addition, I enjoy doing web development and UI/UX which has resulted in the creation of numerous small project. <br>
                         <i class="fa-regular fa-star"></i>
                             I am an enthusiastic individual with a relentless drive to continually enhance my skills. Embracing novelty and staying abreast of new technologies are passions of mine. I invite you to explore my website to gain a deeper understanding of who I am and my commitment to constant learning and growth.
                         <i class="fa-regular fa-star"></i>
@@ -128,6 +128,20 @@
             <h1 class="subtitle">Work & Leadership Experience</h1>
 
             <div class="explist">
+
+                 <div>
+                    <i class="fa-regular fa-star"></i>
+                    <h1>
+                        Internship
+                    </h1>
+                    <h2>Tata Motors <br> (December 2024 - Feburary 2025) </h2>
+                    <p>
+                        Skills: Problem Solving, Project Management, Arduino, C++.
+                        <br> <br>
+                        Created projects for the security of workers and understanding the work environment and ethics.
+                    </p>
+                    
+                </div>
                 
                 <div>
                     <i class="fa-regular fa-star"></i>
